--- a/WebContent/views/desktop/datos/parametros/etiqueta/EtiquetaFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/etiqueta/EtiquetaFormBasic.zul
@@ -13,9 +13,20 @@
 						value="@bind(vm.etiqueta.nombre)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 		</div>
+		
+		
+		<popup id="pop_nombre" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique el nombre de la etiqueta que desea 
+            	registrar.<br /><font color="#3b85a1">Ejemplo: Sonrisas.</font>
+        	]]></html>
+    	</popup>
+    	
+    	
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
