--- a/WebContent/views/desktop/datos/parametros/evento/EventoFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/evento/EventoFormBasic.zul
@@ -13,6 +13,7 @@
 						value="@bind(vm.evento.nombre)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 			<div sclass="col s12">
@@ -29,6 +30,7 @@
 						</template>
 					</combobox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_clasificador, position=after_end"/>
 			</div>
 
 			<div class="col s12">
@@ -38,6 +40,7 @@
 						maxlength="100" value="@bind(vm.evento.tipoEvento)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_tipo, position=after_end"/>
 			</div>
 
 			<div class="col s12">
@@ -48,8 +51,51 @@
 						value="@bind(vm.evento.descripcion)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
 			</div>
 		</div>
+
+
+		<popup id="pop_nombre" width="200px">
+			<html>
+				
+				<![CDATA[ Por favor, indique el nombre del evento que
+				desea registrar.<br /><font color="#3b85a1">Ejemplo:
+				Carrera caminata 20k.</font> ]]>
+				
+			</html>
+		</popup>
+
+		<popup id="pop_clasificador" width="200px">
+			<html>
+				
+				<![CDATA[ Por favor, indique un clasificador para el
+				evento que desea registrar.<br /><font
+				color="#3b85a1">Ejemplo:Caminata.</font> ]]>
+				
+			</html>
+		</popup>
+
+		<popup id="pop_tipo" width="200px">
+			<html>
+				
+				<![CDATA[ Por favor, indique el tipo de evento.<br
+				/><font color="#3b85a1">Ejemplo:Anual.</font> ]]>
+				
+			</html>
+		</popup>
+
+		<popup id="pop_descripcion" width="200px">
+			<html>
+				
+				<![CDATA[ Por favor, indique una descripción breve,
+				sobre el evento que desea registrar.<br /><font
+				color="#3b85a1">Ejemplo:Carrera caminata por 20K para la
+				recolección de fondos.</font> ]]>
+				
+			</html>
+		</popup>
+
 
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
