--- a/WebContent/views/desktop/datos/parametros/fortaleza/FortalezaFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/fortaleza/FortalezaFormBasic.zul
@@ -13,6 +13,7 @@
 						value="@bind(vm.fortaleza.nombre)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 			<div class="col s12">
@@ -23,11 +24,28 @@
 						value="@bind(vm.fortaleza.descripcion)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
 			</div>
 
-
-
 		</div>
+		
+		
+		<popup id="pop_nombre" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique el nombre de la fortaleza que desea 
+            	registrar.<br /><font color="#3b85a1">Ejemplo: Manualidades.</font>
+        	]]></html>
+    	</popup>
+
+		<popup id="pop_descripcion" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique una descripción breve,
+				sobre la actividad que desea registrar.<br /><font
+				color="#3b85a1">Ejemplo: Actitud para realizar
+				actividades de manualidad con los chicos.</font> ]]>
+			</html>
+		</popup>
+
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
