--- a/WebContent/views/desktop/datos/parametros/motivo/MotivoFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/motivo/MotivoFormBasic.zul
@@ -13,6 +13,7 @@
 						value="@bind(vm.motivo.nombre)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 			<div class="col s12">
@@ -23,9 +24,28 @@
 						value="@bind(vm.motivo.descripcion)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
 			</div>
-
 		</div>
+		
+		
+		<popup id="pop_descripcion" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique una descripción breve,
+				sobre el motivo que desea registrar.<br /><font
+				color="#3b85a1">Ejemplo:Motivo de carácter
+				ordinario.</font> ]]>
+			</html>
+		</popup>
+
+		<popup id="pop_nombre" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique el nombre del motivo que
+				desea registrar.<br /><font color="#3b85a1">Ejemplo:
+				Ordinario.</font> ]]>
+			</html>
+		</popup>
+
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
