--- a/WebContent/views/desktop/datos/parametros/parentesco/ParentescoFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/parentesco/ParentescoFormBasic.zul
@@ -12,9 +12,18 @@
 						value="@bind(vm.parentesco.nombre)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 		</div>
-
+		
+		<popup id="pop_nombre" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique el nombre del parentesco
+				que desea registrar.<br /><font color="#3b85a1">Ejemplo:
+				Sobrino.</font> ]]>
+			</html>
+		</popup>
+			
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
