--- a/WebContent/views/desktop/datos/parametros/actividad/ActividadFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/actividad/ActividadFormBasic.zul
@@ -47,31 +47,27 @@
 		
 		
 		<popup id="pop_nombre" width="200px">
-			<html>
-				<![CDATA[ Por favor, indique el nombre de la actividad
-				que desea registrar.<br /><font color="#3b85a1">Ejemplo:
-				Organizar visitas a la escuelita.</font> ]]>
-			</html>
-		</popup>
-
-		<popup id="pop_clasificador" width="200px">
-			<html>
-				<![CDATA[ Por favor, indique un clasificador para la
-				actividad que desea registrar.<br /><font
-				color="#3b85a1">Ejemplo:Visitas.</font> ]]>
-			</html>
-		</popup>
-
-		<popup id="pop_descripcion" width="200px">
-			<html>
-				<![CDATA[ Por favor, indique una descripción breve,
-				sobre la actividad que desea registrar.<br /><font
-				color="#3b85a1">Ejemplo:Organizar el orden de las
-				visitas correspondientes a la escuelita del
-				hospital.</font> ]]>
-			</html>
-		</popup>
-
+        	<html><![CDATA[
+            	Por favor, indique el nombre de la actividad que desea 
+            	registrar.<br /><font color="#3b85a1">Ejemplo: Organizar visitas a la escuelita.</font>
+        	]]></html>
+    	</popup>
+    	
+    	<popup id="pop_clasificador" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique un clasificador para la actividad que desea
+            	registrar.<br /><font color="#3b85a1">Ejemplo:Visitas.</font>
+        	]]></html>
+    	</popup>
+    	
+    	<popup id="pop_descripcion" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique una descripción breve, sobre la actividad que desea
+            	registrar.<br /><font color="#3b85a1">Ejemplo:Organizar el orden de las 
+            	visitas correspondientes a la escuelita del hospital.</font>
+        	]]></html>
+    	</popup>
+		
 
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
